[project]
name = "SAUL"
dynamic = ["version"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}

[tool.setuptools.package-data]
saul = ["spectral/alaska_ambient_infrasound_noise_models.txt"]

[tool.black]
skip-string-normalization = true

[tool.isort]
profile = "black"
conda_env = "saul"
